some ui optimized

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Allow cross-origin popups to communicate via postMessage -->
     <meta http-equiv="Cross-Origin-Opener-Policy" content="unsafe-none" />
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="unsafe-none" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trendmorph AI</title>
   </head>
